--- a/mark4/.gitignore
+++ b/mark4/.gitignore
@@ -39,3 +39,10 @@ yarn-error.*
 
 expo-env.d.ts
 # @end expo-cli
+
+#firebaseConfig
+firebase/firebaseConfig.js
+
+# package-lock.json
+package-lock.json
+
